--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,13 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    background-color: #eeeeee;
+    background-color: #cfcfcf;
+}
+p, h1, h2, h3, a {
+    text-shadow: 3px 2px 5px rgb(167, 167, 167);
+}
+a:hover{
+    transition: 0.3s;
 }
 /* wrapper things */
 #wrapper {
