--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,64 @@
 * {
-    padding: 0;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-body{
-    background-color: #cfcfcf;
+body {
+  background-color: #cfcfcf;
 }
-p, h1, h2, h3, a {
-    text-shadow: 3px 2px 5px rgb(167, 167, 167);
+p,
+h1,
+h2,
+h3,
+a {
+  text-shadow: 3px 2px 5px rgb(167, 167, 167);
 }
-a:hover{
-    transition: 0.3s;
+a:hover {
+  transition: 0.3s;
 }
 /* wrapper things */
 #wrapper {
-    min-height: 100px;
-    max-width: 600px;
-    margin-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 20px;
-    border: 2px solid #888787;
-    box-shadow: 5px 5px 5px black;
-    background-color: rgb(245, 245, 245);
+  min-height: 100px;
+  max-width: 600px;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  border: 2px solid #888787;
+  box-shadow: 5px 5px 5px black;
+  background-color: rgb(245, 245, 245);
 }
 #about {
-    padding: 10px 10px;   
+  padding: 10px 10px;
 }
-#about p{
-    text-indent: 10px;
-}
-
-#stuff, #footer{
-    border-top: 2px solid #888787;
-    padding: 0px 10px;
-}
-#stuff_flex, #footer{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    padding: 0px 10px;
-    margin: 5px 0px;
-}
-#stuff_flex a, #footer a{
-    max-width: 200px;
-    text-decoration-line: none;
-    color: black;
-    margin: 5px;
-    padding: 5px 10px;
-    border-radius: 20px;
-    border: 2px solid #888787;
-}
-#stuff_flex a:hover, #footer a:hover{
-    border: 2px solid black;
+#about p {
+  text-indent: 10px;
 }
 
-
+#stuff,
+#footer {
+  border-top: 2px solid #888787;
+  padding: 0px 10px;
+}
+#stuff_flex,
+#footer {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 0px 10px;
+  margin: 5px 0px;
+}
+#stuff_flex a,
+#footer a {
+  max-width: 200px;
+  text-decoration-line: none;
+  color: black;
+  margin: 5px;
+  padding: 5px 10px;
+  border-radius: 20px;
+  border: 2px solid #888787;
+}
+#stuff_flex a:hover,
+#footer a:hover {
+  border: 2px solid black;
+}
